[gd_scene load_steps=4 format=3 uid="uid://b8qj5x2y401w"]

[ext_resource type="Script" path="res://scripts/popup_acao.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://c3kgpi1ijacaa" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PopupAcao" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -112.5
offset_right = 225.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="VBoxContainer" type="VBoxContainer" parent="Content/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MessageLabel" type="Label" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Action Description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="Content/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1
